--- a/index.html
+++ b/index.html
@@ -1,23 +1,28 @@
 <!DOCTYPE html>
 <html lang="cs">
-<head>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
+		rel="stylesheet">
+
+	<head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Vizitka Elišky Veselé</title>
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
+	<div class="main">
+		<img src="images/foto.jpg" alt="Eliška Veselá">
 
-	<img src="images/foto.jpg" alt="Eliška Veselá">
+		<h1>Eliška Veselá</h1>
 
-	<h1>Eliška Veselá</h1>
+		<p>Pracuje jako programátorka a učí neuronové sítě rozpoznávat obličeje a předměty. Vystudovala ČVUT v Praze a v 26 letech založila startup, kterým dnes úspěšně válcuje velké americké firmy.</p>
 
-	<p>Pracuje jako programátorka a učí neuronové sítě rozpoznávat obličeje a předměty. Vystudovala ČVUT v Praze a v 26 letech založila startup, kterým dnes úspěšně válcuje velké americké firmy.</p>
+		<p class="posledni">I přes velké pracovní nasazení si každý den najde čas na svou dceru a dva psy. Ráda jezdí na koni, plave a chodí po horách. Její vysněná dovolená je strávit půl roku v kanadské divočině.</p>
 
-	<p>I přes velké pracovní nasazení si každý den najde čas na svou dceru a dva psy. Ráda jezdí na koni, plave a chodí po horách. Její vysněná dovolená je strávit půl roku v kanadské divočině.</p>
-
-	<a href="https://twitter.com/">Twitter</a>
-	<a href="https://www.facebook.com/">Facebook</a>
-
+		<a class="btn x" href="https://twitter.com/">Twitter</a>
+		<a class="btn fb" href="https://www.facebook.com/">Facebook</a>
+	</div>
 </body>
 </html>
